week2/ex4/ex4Parser.output
   0  $accept : %entry% $end

   1  main : expr EOF
   2       | expr SEMI

   3  command : expr SEMI
   4          | LET var EQ expr SEMI
   5          | LET REC var EQ FUN var ARROW expr SEMI

   6  expr : LET var EQ expr IN expr
   7       | LET REC var var EQ expr IN expr
   8       | IF expr THEN expr ELSE expr
   9       | expr EQ expr
  10       | expr LT expr
  11       | expr PLUS expr
  12       | expr MINUS expr
  13       | expr TIMES expr
  14       | expr DIV expr
  15       | FUN var ARROW expr
  16       | expr apply_expr
  17       | MATCH expr WITH pattern_expr END
  18       | expr CONS expr
  19       | apply_expr

  20  expr_list : expr
  21            | expr COMMA expr_list

  22  pattern_expr : pattern ARROW expr
  23               | pattern ARROW expr OR pattern_expr

  24  pattern : INT
  25          | BOOL
  26          | ID
  27          | LBRACKET RBRACKET
  28          | LPAR pattern COMMA pattern_list RPAR
  29          | pattern CONS pattern

  30  pattern_list : pattern
  31               | pattern COMMA pattern_list

  32  apply_expr : INT
  33             | BOOL
  34             | ID
  35             | LPAR expr RPAR
  36             | LBRACKET RBRACKET

  37  var : ID

  38  %entry% : '\001' main
  39          | '\002' command

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . main  (38)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	main  goto 13
	expr  goto 14
	apply_expr  goto 15


state 2
	%entry% : '\002' . command  (39)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 16
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	command  goto 17
	expr  goto 18
	apply_expr  goto 15


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	apply_expr : INT .  (32)

	.  reduce 32


state 5
	apply_expr : BOOL .  (33)

	.  reduce 33


state 6
	apply_expr : ID .  (34)

	.  reduce 34


state 7
	expr : LET . var EQ expr IN expr  (6)
	expr : LET . REC var var EQ expr IN expr  (7)

	ID  shift 19
	REC  shift 20
	.  error

	var  goto 21


state 8
	expr : IF . expr THEN expr ELSE expr  (8)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 22
	apply_expr  goto 15


state 9
	apply_expr : LPAR . expr RPAR  (35)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 23
	apply_expr  goto 15


state 10
	expr : FUN . var ARROW expr  (15)

	ID  shift 19
	.  error

	var  goto 24


state 11
	expr : MATCH . expr WITH pattern_expr END  (17)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 25
	apply_expr  goto 15


state 12
	apply_expr : LBRACKET . RBRACKET  (36)

	RBRACKET  shift 26
	.  error


state 13
	%entry% : '\001' main .  (38)

	.  reduce 38


state 14
	main : expr . EOF  (1)
	main : expr . SEMI  (2)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	SEMI  shift 33
	EOF  shift 34
	CONS  shift 35
	LBRACKET  shift 12
	.  error

	apply_expr  goto 36


state 15
	expr : apply_expr .  (19)

	.  reduce 19


state 16
	command : LET . var EQ expr SEMI  (4)
	command : LET . REC var EQ FUN var ARROW expr SEMI  (5)
	expr : LET . var EQ expr IN expr  (6)
	expr : LET . REC var var EQ expr IN expr  (7)

	ID  shift 19
	REC  shift 37
	.  error

	var  goto 38


state 17
	%entry% : '\002' command .  (39)

	.  reduce 39


state 18
	command : expr . SEMI  (3)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	SEMI  shift 39
	CONS  shift 35
	LBRACKET  shift 12
	.  error

	apply_expr  goto 36


state 19
	var : ID .  (37)

	.  reduce 37


state 20
	expr : LET REC . var var EQ expr IN expr  (7)

	ID  shift 19
	.  error

	var  goto 40


state 21
	expr : LET var . EQ expr IN expr  (6)

	EQ  shift 41
	.  error


state 22
	expr : IF expr . THEN expr ELSE expr  (8)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	THEN  shift 42
	LPAR  shift 9
	CONS  shift 35
	LBRACKET  shift 12
	.  error

	apply_expr  goto 36


state 23
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)
	apply_expr : LPAR expr . RPAR  (35)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	RPAR  shift 43
	CONS  shift 35
	LBRACKET  shift 12
	.  error

	apply_expr  goto 36


state 24
	expr : FUN var . ARROW expr  (15)

	ARROW  shift 44
	.  error


state 25
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : MATCH expr . WITH pattern_expr END  (17)
	expr : expr . CONS expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	WITH  shift 45
	CONS  shift 35
	LBRACKET  shift 12
	.  error

	apply_expr  goto 36


state 26
	apply_expr : LBRACKET RBRACKET .  (36)

	.  reduce 36


state 27
	expr : expr PLUS . expr  (11)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 46
	apply_expr  goto 15


state 28
	expr : expr MINUS . expr  (12)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 47
	apply_expr  goto 15


state 29
	expr : expr TIMES . expr  (13)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 48
	apply_expr  goto 15


state 30
	expr : expr DIV . expr  (14)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 49
	apply_expr  goto 15


state 31
	expr : expr EQ . expr  (9)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 50
	apply_expr  goto 15


state 32
	expr : expr LT . expr  (10)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 51
	apply_expr  goto 15


state 33
	main : expr SEMI .  (2)

	.  reduce 2


state 34
	main : expr EOF .  (1)

	.  reduce 1


state 35
	expr : expr CONS . expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 52
	apply_expr  goto 15


state 36
	expr : expr apply_expr .  (16)

	.  reduce 16


state 37
	command : LET REC . var EQ FUN var ARROW expr SEMI  (5)
	expr : LET REC . var var EQ expr IN expr  (7)

	ID  shift 19
	.  error

	var  goto 53


state 38
	command : LET var . EQ expr SEMI  (4)
	expr : LET var . EQ expr IN expr  (6)

	EQ  shift 54
	.  error


state 39
	command : expr SEMI .  (3)

	.  reduce 3


state 40
	expr : LET REC var . var EQ expr IN expr  (7)

	ID  shift 19
	.  error

	var  goto 55


state 41
	expr : LET var EQ . expr IN expr  (6)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 56
	apply_expr  goto 15


state 42
	expr : IF expr THEN . expr ELSE expr  (8)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 57
	apply_expr  goto 15


state 43
	apply_expr : LPAR expr RPAR .  (35)

	.  reduce 35


state 44
	expr : FUN var ARROW . expr  (15)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 58
	apply_expr  goto 15


state 45
	expr : MATCH expr WITH . pattern_expr END  (17)

	INT  shift 59
	BOOL  shift 60
	ID  shift 61
	LPAR  shift 62
	LBRACKET  shift 63
	.  error

	pattern_expr  goto 64
	pattern  goto 65


state 46
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr PLUS expr .  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	TIMES  shift 29
	DIV  shift 30
	LPAR  shift 9
	LBRACKET  shift 12
	IN  reduce 11
	PLUS  reduce 11
	MINUS  reduce 11
	EQ  reduce 11
	LT  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	WITH  reduce 11
	OR  reduce 11
	END  reduce 11
	SEMI  reduce 11
	EOF  reduce 11
	CONS  reduce 11

	apply_expr  goto 36


state 47
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr MINUS expr .  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	TIMES  shift 29
	DIV  shift 30
	LPAR  shift 9
	LBRACKET  shift 12
	IN  reduce 12
	PLUS  reduce 12
	MINUS  reduce 12
	EQ  reduce 12
	LT  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	WITH  reduce 12
	OR  reduce 12
	END  reduce 12
	SEMI  reduce 12
	EOF  reduce 12
	CONS  reduce 12

	apply_expr  goto 36


state 48
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr TIMES expr .  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 9
	LBRACKET  shift 12
	IN  reduce 13
	PLUS  reduce 13
	MINUS  reduce 13
	TIMES  reduce 13
	DIV  reduce 13
	EQ  reduce 13
	LT  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	WITH  reduce 13
	OR  reduce 13
	END  reduce 13
	SEMI  reduce 13
	EOF  reduce 13
	CONS  reduce 13

	apply_expr  goto 36


state 49
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr DIV expr .  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 9
	LBRACKET  shift 12
	IN  reduce 14
	PLUS  reduce 14
	MINUS  reduce 14
	TIMES  reduce 14
	DIV  reduce 14
	EQ  reduce 14
	LT  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	WITH  reduce 14
	OR  reduce 14
	END  reduce 14
	SEMI  reduce 14
	EOF  reduce 14
	CONS  reduce 14

	apply_expr  goto 36


state 50
	expr : expr . EQ expr  (9)
	expr : expr EQ expr .  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	LPAR  shift 9
	CONS  shift 35
	LBRACKET  shift 12
	IN  reduce 9
	EQ  reduce 9
	LT  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	RPAR  reduce 9
	WITH  reduce 9
	OR  reduce 9
	END  reduce 9
	SEMI  reduce 9
	EOF  reduce 9

	apply_expr  goto 36


state 51
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr LT expr .  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	LPAR  shift 9
	CONS  shift 35
	LBRACKET  shift 12
	IN  reduce 10
	EQ  reduce 10
	LT  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	WITH  reduce 10
	OR  reduce 10
	END  reduce 10
	SEMI  reduce 10
	EOF  reduce 10

	apply_expr  goto 36


state 52
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)
	expr : expr CONS expr .  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	LPAR  shift 9
	CONS  shift 35
	LBRACKET  shift 12
	IN  reduce 18
	EQ  reduce 18
	LT  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	RPAR  reduce 18
	WITH  reduce 18
	OR  reduce 18
	END  reduce 18
	SEMI  reduce 18
	EOF  reduce 18

	apply_expr  goto 36


state 53
	command : LET REC var . EQ FUN var ARROW expr SEMI  (5)
	expr : LET REC var . var EQ expr IN expr  (7)

	ID  shift 19
	EQ  shift 66
	.  error

	var  goto 55


state 54
	command : LET var EQ . expr SEMI  (4)
	expr : LET var EQ . expr IN expr  (6)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 67
	apply_expr  goto 15


state 55
	expr : LET REC var var . EQ expr IN expr  (7)

	EQ  shift 68
	.  error


state 56
	expr : LET var EQ expr . IN expr  (6)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	IN  shift 69
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	CONS  shift 35
	LBRACKET  shift 12
	.  error

	apply_expr  goto 36


state 57
	expr : IF expr THEN expr . ELSE expr  (8)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	ELSE  shift 70
	LPAR  shift 9
	CONS  shift 35
	LBRACKET  shift 12
	.  error

	apply_expr  goto 36


state 58
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : FUN var ARROW expr .  (15)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	CONS  shift 35
	LBRACKET  shift 12
	IN  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAR  reduce 15
	WITH  reduce 15
	OR  reduce 15
	END  reduce 15
	SEMI  reduce 15
	EOF  reduce 15

	apply_expr  goto 36


state 59
	pattern : INT .  (24)

	.  reduce 24


state 60
	pattern : BOOL .  (25)

	.  reduce 25


state 61
	pattern : ID .  (26)

	.  reduce 26


state 62
	pattern : LPAR . pattern COMMA pattern_list RPAR  (28)

	INT  shift 59
	BOOL  shift 60
	ID  shift 61
	LPAR  shift 62
	LBRACKET  shift 63
	.  error

	pattern  goto 71


state 63
	pattern : LBRACKET . RBRACKET  (27)

	RBRACKET  shift 72
	.  error


state 64
	expr : MATCH expr WITH pattern_expr . END  (17)

	END  shift 73
	.  error


state 65
	pattern_expr : pattern . ARROW expr  (22)
	pattern_expr : pattern . ARROW expr OR pattern_expr  (23)
	pattern : pattern . CONS pattern  (29)

	ARROW  shift 74
	CONS  shift 75
	.  error


state 66
	command : LET REC var EQ . FUN var ARROW expr SEMI  (5)

	FUN  shift 76
	.  error


state 67
	command : LET var EQ expr . SEMI  (4)
	expr : LET var EQ expr . IN expr  (6)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	IN  shift 69
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	SEMI  shift 77
	CONS  shift 35
	LBRACKET  shift 12
	.  error

	apply_expr  goto 36


state 68
	expr : LET REC var var EQ . expr IN expr  (7)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 78
	apply_expr  goto 15


state 69
	expr : LET var EQ expr IN . expr  (6)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 79
	apply_expr  goto 15


state 70
	expr : IF expr THEN expr ELSE . expr  (8)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 80
	apply_expr  goto 15


state 71
	pattern : LPAR pattern . COMMA pattern_list RPAR  (28)
	pattern : pattern . CONS pattern  (29)

	COMMA  shift 81
	CONS  shift 75
	.  error


state 72
	pattern : LBRACKET RBRACKET .  (27)

	.  reduce 27


state 73
	expr : MATCH expr WITH pattern_expr END .  (17)

	.  reduce 17


state 74
	pattern_expr : pattern ARROW . expr  (22)
	pattern_expr : pattern ARROW . expr OR pattern_expr  (23)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 82
	apply_expr  goto 15


state 75
	pattern : pattern CONS . pattern  (29)

	INT  shift 59
	BOOL  shift 60
	ID  shift 61
	LPAR  shift 62
	LBRACKET  shift 63
	.  error

	pattern  goto 83


state 76
	command : LET REC var EQ FUN . var ARROW expr SEMI  (5)

	ID  shift 19
	.  error

	var  goto 84


state 77
	command : LET var EQ expr SEMI .  (4)

	.  reduce 4


state 78
	expr : LET REC var var EQ expr . IN expr  (7)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	IN  shift 85
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	CONS  shift 35
	LBRACKET  shift 12
	.  error

	apply_expr  goto 36


state 79
	expr : LET var EQ expr IN expr .  (6)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	CONS  shift 35
	LBRACKET  shift 12
	IN  reduce 6
	THEN  reduce 6
	ELSE  reduce 6
	RPAR  reduce 6
	WITH  reduce 6
	OR  reduce 6
	END  reduce 6
	SEMI  reduce 6
	EOF  reduce 6

	apply_expr  goto 36


state 80
	expr : IF expr THEN expr ELSE expr .  (8)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	CONS  shift 35
	LBRACKET  shift 12
	IN  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	RPAR  reduce 8
	WITH  reduce 8
	OR  reduce 8
	END  reduce 8
	SEMI  reduce 8
	EOF  reduce 8

	apply_expr  goto 36


state 81
	pattern : LPAR pattern COMMA . pattern_list RPAR  (28)

	INT  shift 59
	BOOL  shift 60
	ID  shift 61
	LPAR  shift 62
	LBRACKET  shift 63
	.  error

	pattern  goto 86
	pattern_list  goto 87


state 82
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)
	pattern_expr : pattern ARROW expr .  (22)
	pattern_expr : pattern ARROW expr . OR pattern_expr  (23)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	OR  shift 88
	CONS  shift 35
	LBRACKET  shift 12
	END  reduce 22

	apply_expr  goto 36


state 83
	pattern : pattern . CONS pattern  (29)
	pattern : pattern CONS pattern .  (29)

	CONS  shift 75
	RPAR  reduce 29
	ARROW  reduce 29
	COMMA  reduce 29


state 84
	command : LET REC var EQ FUN var . ARROW expr SEMI  (5)

	ARROW  shift 89
	.  error


state 85
	expr : LET REC var var EQ expr IN . expr  (7)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 90
	apply_expr  goto 15


state 86
	pattern : pattern . CONS pattern  (29)
	pattern_list : pattern .  (30)
	pattern_list : pattern . COMMA pattern_list  (31)

	COMMA  shift 91
	CONS  shift 75
	RPAR  reduce 30


state 87
	pattern : LPAR pattern COMMA pattern_list . RPAR  (28)

	RPAR  shift 92
	.  error


state 88
	pattern_expr : pattern ARROW expr OR . pattern_expr  (23)

	INT  shift 59
	BOOL  shift 60
	ID  shift 61
	LPAR  shift 62
	LBRACKET  shift 63
	.  error

	pattern_expr  goto 93
	pattern  goto 65


state 89
	command : LET REC var EQ FUN var ARROW . expr SEMI  (5)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 94
	apply_expr  goto 15


state 90
	expr : LET REC var var EQ expr IN expr .  (7)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	CONS  shift 35
	LBRACKET  shift 12
	IN  reduce 7
	THEN  reduce 7
	ELSE  reduce 7
	RPAR  reduce 7
	WITH  reduce 7
	OR  reduce 7
	END  reduce 7
	SEMI  reduce 7
	EOF  reduce 7

	apply_expr  goto 36


state 91
	pattern_list : pattern COMMA . pattern_list  (31)

	INT  shift 59
	BOOL  shift 60
	ID  shift 61
	LPAR  shift 62
	LBRACKET  shift 63
	.  error

	pattern  goto 86
	pattern_list  goto 95


state 92
	pattern : LPAR pattern COMMA pattern_list RPAR .  (28)

	.  reduce 28


state 93
	pattern_expr : pattern ARROW expr OR pattern_expr .  (23)

	.  reduce 23


state 94
	command : LET REC var EQ FUN var ARROW expr . SEMI  (5)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : expr . CONS expr  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	SEMI  shift 96
	CONS  shift 35
	LBRACKET  shift 12
	.  error

	apply_expr  goto 36


state 95
	pattern_list : pattern COMMA pattern_list .  (31)

	.  reduce 31


state 96
	command : LET REC var EQ FUN var ARROW expr SEMI .  (5)

	.  reduce 5


Rules never reduced:
	expr_list : expr  (20)
	expr_list : expr COMMA expr_list  (21)


33 terminals, 11 nonterminals
40 grammar rules, 97 states
